# residual-interp-demosaic

./: README.md  benchmark.py  benchmark_tshirts.py  download_datasets.py  pyproject.toml  run_demosaic.py
demosaic/: __init__.py  api.py  bayer.py  utils.py
demosaic/algorithms/: __init__.py  ari.py  ri_mlri.py
demosaic_reference/: api.py  matlab_compat.py  metrics.py
demosaic_reference/algorithms/: __init__.py  ari.py  ri_mlri.py
results/tshirts/: benchmark_results.json  benchmark_summary.md
tests/: test_ari_parity.py  test_bayer_metrics.py  test_reference_parity.py
