[project]
name = "residual-interpolation-demosaicing"
version = "0.1.0"
description = "Python re-implementation of residual interpolation demosaicing algorithms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "colour-demosaicing>=0.2.7",
    "pytest>=9.0.3",
]
